@@ -7,6 +7,10 @@ Regina - A Normal Surface Theory Calculator
     For general highlights of the changes between releases, see
     HIGHLIGHTS.txt in the same directory as this file.
 
+    ENGINE:
+        Class NAbelianGroup:
+            - Added global comparisons isTrivial() and operator ==.
+
 Version 3.95  [ 12 October, 2003 ] - Prelease for version 4.0.
     GRAPHICAL USER INTERFACE:
         - Rewrote the entire user interface in C++ using the KDE
